[tool.poetry]
name = "caete-dvm"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.19.4"
cftime = "^1.2.1"
pandas = "^1.1.4"
matplotlib = "^3.3.3"
ipython = "^7.19.0"


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
